# taggr

./: CLAUDE.md  LICENSE  find_duplicates.py  main.py  pyproject.toml  taggerr.yaml
.plans/: development-todos.md  requirements.md
output_test_actual/1234567/: movie.nfo
scripts/: deduplicate.py  find_duplicates.py  find_inode_or_size_matches.py
taggrr/: __init__.py
taggrr/api/: __init__.py  scraperr_client.py
taggrr/cli/: __init__.py
taggrr/config/: settings.py
taggrr/core/: __init__.py  analyzer.py  analyzer_config.py  duplicate_detector.py  formatter.py  models.py  processor.py  scanner.py
tests/: __init__.py  conftest.py  test_find_duplicates.py  test_integration.py
tests/api/: test_scraperr_client.py
tests/config/: test_settings.py
tests/core/: test_analyzer.py  test_duplicate_detector.py  test_formatter.py  test_formatter_fc2_fix.py  test_scanner.py  test_scanner_grouping_fix.py
